chore: sync current project changes